--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 web开发者的14个工具和资源: http://blog.csdn.net/u011001084/article/details/54962383
+http://www.open-open.com/lib/view/open1445669591320.html 百度母婴
